[package]
name = "arcade_nexus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
async-graphql.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "arcade_nexus_contract"
path = "src/contract.rs"

[[bin]]
name = "arcade_nexus_service"
path = "src/service.rs"
