[package]
name = "markets_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
linera-sdk = "0.15.6"
linera-views = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "markets_hub_contract"
path = "src/contract.rs"

[[bin]]
name = "markets_hub_service"
path = "src/service.rs"
