[package]
name = "player_profile"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
async-graphql.workspace = true
thiserror.workspace = true
bcs.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "player_profile_contract"
path = "src/contract.rs"

[[bin]]
name = "player_profile_service"
path = "src/service.rs"
