[package]
name = "typing_arena"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
async-graphql.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "typing_arena_contract"
path = "src/contract.rs"

[[bin]]
name = "typing_arena_service"
path = "src/service.rs"
